# connect-4

./: .gitignore  CMakeLists.txt  Connect4.sln  Connect4.vcxproj  Connect4.vcxproj.filters  LICENSE  README.md  connect4.cpp  connect4.h  main.cpp  makefile.mak
connect4/: CMakeLists.txt
connect4/include/: connect4.h
connect4/src/: connect4.cpp
include/: connect4.h
src/: connect4.cpp  main.cpp
